sort recyclerview by starcount

--- a/app/src/main/res/layout/item_userinfo.xml
+++ b/app/src/main/res/layout/item_userinfo.xml
@@ -12,6 +12,7 @@
         android:id="@+id/iv_userInfo_thumbnail"
         android:layout_width="80dp"
         android:layout_height="80dp"
+        android:scaleType="centerCrop"
 
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
